--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
@@ -156,6 +156,8 @@
 		function del(t){
 			tab.removeChild(t.parentNode.parentNode)
 		}
-		
+		fuction(aa){
+			alert(510000)
+		}
 	</script>
 </html>
